--- a/index.html
+++ b/index.html
@@ -529,43 +529,70 @@ table td {
 											  </tr>
 											</thead>
 											<tbody>
-											  <tr>
-												<td>08:00 - 08:10</td>
-												<td>Opening Remarks and Introduction</td>
-											  </tr>
-											  <tr>
-												<td>08:10 - 08:50</td>
-												<td><strong>Keynote Talk</strong> (TBA)</td>
-											  </tr>
-											  <tr>
-												<td>08:50 - 09:40</td>
-												<td>Oral Session 1 (Main Workshop Track - 3 x 15 min)</td>
-											  </tr>
-											  <tr>
-												<td>09:40 - 10:00</td>
-												<td>Poster Teasers (20 x 1 min)</td>
-											  </tr>
-											  <tr>
-												<td>10:00 - 10:45</td>
-												<td>Coffee + Posters</td>
-											  </tr>
-											  <tr>
-												<td>10:45 - 11:30</td>
-												<td>Oral Session 2 (Main Workshop Track 3 x 15 min)</td>
-											  </tr>
-											  <tr>
-												<td>11:30 - 12:00</td>
-												<td>Oral Session 3 (Pan-Asia Track 3 x 10 min)</td>
-											  </tr>
-											  <tr>
-												<td>12:00 - 12:20</td>
-												<td>Oral Session 4 (Conference-to-Workshop Track - 4 x 5 min)</td>
-											  </tr>
-											  <tr>
-												<td>12:20 - 12:30</td>
-												<td>Closing Remarks and Awards</td>
-											  </tr>
-											</tbody>
+												<tr>
+												  <td>08:00 - 08:10</td>
+												  <td>Opening Remarks and Introduction</td>
+												</tr>
+												<tr>
+												  <td>08:10 - 08:50</td>
+												  <td><strong>Keynote Talk</strong> (TBA)</td>
+												</tr>
+												<tr>
+												  <td>08:50 - 09:40</td>
+												  <td>
+													<strong>Oral Session 1: Foundation Models and Generalization in Medical AI</strong> <br/>
+													<em>3 x 15 min talks</em><br/>
+													NFCMTL: Auto NailFold Capillaroscopy through a Multi-Task Learning Model — Ding et al.<br/>
+													Foundation Models as Class-Incremental Learners for Dermatological Image Classification — Elkhayat et al.<br/>
+													ZeroSlide: Is Zero-Shot Classification Adequate for Lifelong Learning in WSI Analysis? — Bui et al.
+												  </td>
+												</tr>
+												<tr>
+												  <td>09:40 - 10:00</td>
+												  <td>Poster Teasers (20 x 1 min)</td>
+												</tr>
+												<tr>
+												  <td>10:00 - 10:30</td>
+												  <td>Coffee + Posters</td>
+												</tr>
+												<tr>
+												  <td>10:30 - 11:15</td>
+												  <td>
+													<strong>Oral Session 2: Representation Learning for Detection and Diagnosis</strong> <br/>
+													<em>3 x 15 min talks</em><br/>
+													GroundingDINO for Open-Set Lesion Detection in Medical Imaging — Roughley et al.<br/>
+													Structured Spectral Graph Learning for Anomaly Classification in 3D Chest CT — Di Piazza et al.<br/>
+													Automated Method Design for Cancer Image Classification by Differential Evolution — Oviedo Acosta et al.
+												  </td>
+												</tr>
+												<tr>
+												  <td>11:15 - 12:00</td>
+												  <td>
+													<strong>Oral Session 3: Signals, Bias, and Structure in Medical Data</strong> <br/>
+													<em>3 x 15 min talks</em><br/>
+													A Study in Scatter: Investigating Low-Contrast Contents Outside X-Ray Collimation — Maier et al.<br/>
+													ESCAViT: EEG Symmetry-Aware Training with Domain-Adaptive Contrastive Learning — Lim et al.<br/>
+													Priority-Aware Clinical Pathology Hierarchy Training for MIL — Hong et al.
+												  </td>
+												</tr>
+												<tr>
+												  <td>12:00 - 12:20</td>
+												  <td>
+													<strong>Oral Session 4: Conference-to-Workshop Track</strong> <br/>
+													<em>4 x 5 min flash talks</em><br/>
+													An Argument for Applications of Reinforcement in Image Segmentation to Mitigate Adversarial Attacks — Ryan Marinelli<br/>
+													MM-DINOv2: Adapting Foundation Models for Multi-Modal Medical Image Analysis — Daniel Scholz et al.<br/>
+													Pathology-Aware Adaptive Watermarking for Text-Driven Medical Image Synthesis — Chanyoung Kim et al.<br/>
+													RL4Med-DDPO: Reinforcement Learning for Controlled Guidance Towards Diverse Medical Image Generation — Parham Saremi et al.
+												  </td>
+												</tr>
+												<tr>
+												  <td>12:20 - 12:30</td>
+												  <td>Closing Remarks and Awards</td>
+												</tr>
+											  </tbody>
+											  
+											  
 										</table>
 									</div>
 								</section>
