--- a/index.html
+++ b/index.html
@@ -498,9 +498,26 @@ table td {
 									<header class="major">
 										<h2>Instructions for Camera-Ready Submission</h2>
 									</header>
-									<div class="section">
-										<p>TBA</p>
-									</div>
+									<style>
+										.inner {
+											text-align: justify;
+										}
+									</style>
+									<p>Please submit a PDF version of your paper. Additionally, you will need to submit the following doucments: (i) source files (LaTeX, Word, etc.), (ii) duly signed <i>License to Publish</i> document by one of the authors, and (iii) a separate pdf document outlining the changes made to your paper based on reviewer feedback.
+										
+
+									<p>Camera-Ready Submission Guidelines</p>
+
+									<ol>
+										<li>Page Limit: The submitted manuscript should be a maximum of 8.5 pages, plus an additional 2 pages for references. The overall paper length must not exceed 10.5 pages (including appendix and references).</li>
+
+										<li>Other Instructions: Please refer to the instructions for MICCAI Main track camera ready guidelines (<a href="https://conferences.miccai.org/2025/en/CAMERA-READY-SUBMISSION-GUIDELINES.html" target="_blank">https://conferences.miccai.org/2025/en/CAMERA-READY-SUBMISSION-GUIDELINES.html</a>).</li>
+
+										<li>License to Publish: Please wait for more information on this</li>
+										
+									</ol>
+
+									<p>Please update your submission on OpenReview by August 4th, 2025. You can do this by editing your original submission and selecting "Camera Ready Version." The system will allow you to update the following fields: Title, Keywords, TL;DR, Abstract, and Camera-Ready ZIP submission (containing your paper, source code, license, and changes document).</p>
 								</section>			
 
 								<hr class="major" />
