Update camera ready instructions

--- a/index.html
+++ b/index.html
@@ -513,7 +513,12 @@ table td {
 
 										<li>Other Instructions: Please refer to the instructions for MICCAI Main track camera ready guidelines (<a href="https://conferences.miccai.org/2025/en/CAMERA-READY-SUBMISSION-GUIDELINES.html" target="_blank">https://conferences.miccai.org/2025/en/CAMERA-READY-SUBMISSION-GUIDELINES.html</a>).</li>
 
-										<li>License to Publish: Please wait for more information on this</li>
+										<li>
+										  License to Publish: Please wait for more information on this.<br>
+										  <span style="color:red;">
+										    We are currently finalizing the volume and title of the proceedings. Please submit the camera-ready version without the License to Publish for now. We will contact all authors to sign the License to Publish as soon as this is finalized.
+										  </span>
+										</li>
 										
 									</ol>
 
