--- a/index.html
+++ b/index.html
@@ -514,10 +514,8 @@ table td {
 										<li>Other Instructions: Please refer to the instructions for MICCAI Main track camera ready guidelines (<a href="https://conferences.miccai.org/2025/en/CAMERA-READY-SUBMISSION-GUIDELINES.html" target="_blank">https://conferences.miccai.org/2025/en/CAMERA-READY-SUBMISSION-GUIDELINES.html</a>).</li>
 
 										<li>
-										  License to Publish: Please wait for more information on this.<br>
-										  <span style="color:red;">
-										    We are currently finalizing the volume and title of the proceedings. Please submit the camera-ready version without the License to Publish for now. We will contact all authors to sign the License to Publish as soon as this is finalized.
-										  </span>
+										  License to Publish: Download the file available here <a href="https://docs.google.com/document/d/1ib85HHkbVBH8I6z8WFzpjNC8HvdZMZ6-/edit?usp=sharing&ouid=110195288439620779562&rtpof=true&sd=true" target="_blank">Licence To Publish EMERGE</a> .<br>
+										  Please fill in the required information and sign the document. The license must be signed (digital signatures are not accepted) by one of the authors of the paper.
 										</li>
 										
 									</ol>
